added default images for trainers and services

--- a/fitness/core/templates/core/includes/services-cards.html
+++ b/fitness/core/templates/core/includes/services-cards.html
@@ -4,7 +4,7 @@
     <a href="{% url 'service' service_slug=service.slug %}">
       <div class="card__wrap shadow-lg rounded-4">
         <div class="card__img-container">
-          <img class="card__img" src="{{ service.photo.url }}" alt="{{ service }}">
+          <img class="card__img" src="{{ service.avatar }}" alt="{{ service }}">
         </div>
 
         <div class="card__name">
