--- a/fitness/core/templates/core/includes/trainers-cards.html
+++ b/fitness/core/templates/core/includes/trainers-cards.html
@@ -4,7 +4,7 @@
     <a href="{% url 'trainer' trainer_slug=trainer.slug %}">
       <div class="card__wrap shadow-lg rounded-4">
         <div class="card__img-container">
-          <img class="card__img" src="{{ trainer.photo.url }}" alt="{{ trainer }}">
+          <img class="card__img" src="{{ trainer.avatar }}" alt="{{ trainer }}">
         </div>
 
         <div class="card__name">
