--- a/fitness/core/templates/core/service.html
+++ b/fitness/core/templates/core/service.html
@@ -22,7 +22,7 @@
 
     <div class="row card__row">
       <div class="col-md-5">
-        <img class="rounded-4 w-100 sticky" src="{{ service.photo.url }}" alt="{{ service }}">
+        <img class="rounded-4 w-100 sticky" src="{{ service.avatar }}" alt="{{ service }}">
       </div>
 
       <div class="col-md-7">
