--- a/fitness/schedule/templates/schedule/includes/schedule-item.html
+++ b/fitness/schedule/templates/schedule/includes/schedule-item.html
@@ -2,8 +2,8 @@
     data-color="{{ item.service.pk }}"
     data-service-url="{% url 'service' service_slug=item.service.slug %}"
     data-date="{{ item.start_time|date:'j E, l'|lower }}"
-    data-service-photo="{{ item.service.photo.url }}"
-    data-trainer-photo="{{ item.trainer.photo.url }}"
+    data-service-photo="{{ item.service.avatar }}"
+    data-trainer-photo="{{ item.trainer.avatar }}"
     data-trainer-url="{% url 'trainer' trainer_slug=item.trainer.slug %}"
     data-schedule-id="{{ item.pk }}"
     data-available="{% if item.count_remained_seats and item.trainer.user != user and item.in_future %}true{% else %}false{% endif %}"
