added the color field for the service. minor improvements for the accordion

--- a/fitness/core/templates/core/index.html
+++ b/fitness/core/templates/core/index.html
@@ -54,28 +54,28 @@
     <div class="row advantages__row">
       <div class="col-lg-6">
         <div class="accordions">
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Спортивный бассейн 25 м</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 5 дорожек для плавания для индивидуальных и групповых тренировок, а также для свободного плавания.
               </p>
             </div>
           </div>
 
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Зал функциональных тренировок 200 м²</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 Отдельный зал, где сочетается оборудование для функциональных и силовых тренировок, а также для тяжелой
                 атлетики - штанги, стойки, брусья, широкий гантельный ряд.
@@ -83,14 +83,14 @@
             </div>
           </div>
 
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Парковка</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 Бесплатная просторная парковка на 300+ автомобилей.
               </p>
@@ -101,14 +101,14 @@
 
       <div class="col-lg-6">
         <div class="accordions">
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Квалифицированный тренерский состав</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 Наша команда – это кандидаты и мастера спорта, призеры международных соревнований с высшим спортивным
                 или профессиональным фитнес-образованием, сертифицированные специалисты.
@@ -116,14 +116,14 @@
             </div>
           </div>
 
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Персональный менеджер</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 Обращаясь в наш фитнес, за вами закрепляется персональный менеджер, к которому можно обратиться за
                 решением вопросов.
@@ -131,14 +131,14 @@
             </div>
           </div>
 
-          <div class="accordion">
+          <div class="accordion closed">
             <div class="accordion-header">
               <strong class="advantages-subtitle">Юридическая надежность</strong>
 
-              <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+              <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
             </div>
 
-            <div class="accordion-body closed">
+            <div class="accordion-body">
               <p class="mb-0">
                 Мы всегда помогаем решить вопросы клиента - расторгнуть договор, поменять тренера, вернуть деньги за
                 услугу, на каждую услугу предоставляется чек.
