--- a/fitness/users/templates/users/trainer_classes.html
+++ b/fitness/users/templates/users/trainer_classes.html
@@ -14,18 +14,18 @@
       <span>{% if day.date|date:'Y' == current_year %}{{ day.date|date:'j E, l'|lower }}{% else %}{{ day.date|date:'j E Y' }}{% endif %}</span>
 
       {% for el in day.items %}
-      <div class="accordion">
-        <div class="accordion-header">
+      <div class="accordion closed">
+        <div class="accordion-header border-l" style="--border-color: {{ el.service.color }};">
           <h4 class="mb-0">{{ el.service.name }} в {{ el.start_time|date:'H:i' }}</h4>
 
           <span>Записано: {{ el.active_booking|length }} / {{ el.service.max_participants }}</span>
 
           {% if el.active_booking|length %}
-          <button class="accordion-btn closed"><i class="bi bi-chevron-up"></i></button>
+          <button class="accordion-btn"><i class="bi bi-chevron-up"></i></button>
           {% endif %}
         </div>
 
-        <div class="accordion-body closed">
+        <div class="accordion-body">
           <ul class="list-reset classes-list">
             {% for booking in el.active_booking %}
             <li class="classes-item">
