the order of the elements in the header has been changed

--- a/fitness/users/templates/users/includes/user-menu.html
+++ b/fitness/users/templates/users/includes/user-menu.html
@@ -7,7 +7,7 @@
       <span>{{ user|truncatechars:15 }}</span>
     </button>
 
-    <ul class="dropdown-menu dropdown-menu-md-end text-small">
+    <ul class="dropdown-menu dropdown-menu-end text-small">
       {% for item in menu %}
 
       {% if item %}
