--- a/fitness/core/templates/core/service.html
+++ b/fitness/core/templates/core/service.html
@@ -30,7 +30,7 @@
           <h1 class="title">{{ service }}</h1>
 
           <div class="text-block">
-            <span><i class="bi bi-clock"></i> Продолжительность: {{ service.duration_minutes}} мин.</span>
+            <span><i class="bi bi-clock"></i> Продолжительность: {{ service.duration_min }} мин.</span>
           </div>
         </div>
 
