--- a/fitness/users/templates/users/includes/schedule-item.html
+++ b/fitness/users/templates/users/includes/schedule-item.html
@@ -6,7 +6,7 @@
     data-trainer-photo="{{ item.trainer.avatar }}"
     data-trainer-url="{% url 'trainer' trainer_slug=item.trainer.slug %}"
     data-schedule-id="{{ item.pk }}"
-    data-available="{% if item.count_remained_seats and item.in_future %}true{% else %}false{% endif %}"
+    data-available="{% if item.is_available %}true{% else %}false{% endif %}"
     data-is-booked="{% if not canceled %}true{% else %}false{% endif %}"
     data-can-cancel="{% if not canceled and item.day_before %}true{% else %}false{% endif %}">
 
@@ -16,17 +16,15 @@
     <span class="schedule-time-range">
       <time datetime="{{ item.start_time|date:'c' }}">{{ item.start_time|date:'H:i' }}</time>
       <span> - </span>
-      {% with end_time=item.start_time|add:item.service.duration %}
-      <time datetime="{{ end_time|date:'c' }}">{{ end_time|date:'H:i' }}</time>
-      {% endwith %}
+      <time datetime="{{ item.end_time|date:'c' }}">{{ item.end_time|date:'H:i' }}</time>
     </span>
 
-    <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ item.service.duration_minutes }} мин.</span>
+    <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ item.service.duration_min }} мин.</span>
   </div>
 
   <span class="schedule__trainer">{{ item.trainer }}</span>
 
-  {% if item.in_future and item.count_remained_seats %}
+  {% if item.is_available %}
   <span class="text-body-secondary">Свободно мест: {{ item.count_remained_seats }}</span>
   {% endif %}
 
