--- a/fitness/users/templates/users/trainer_classes.html
+++ b/fitness/users/templates/users/trainer_classes.html
@@ -32,7 +32,7 @@
               {% endwith %}
             </span>
 
-            <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ el.service.duration_minutes }} мин.</span>
+            <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ el.service.duration_min }} мин.</span>
           </div>
 
           <span>Записано: {{ el.active_booking|length }} / {{ el.service.max_participants }}</span>
