--- a/fitness/schedule/templates/schedule/includes/schedule-item.html
+++ b/fitness/schedule/templates/schedule/includes/schedule-item.html
@@ -6,9 +6,9 @@
     data-trainer-photo="{{ item.trainer.avatar }}"
     data-trainer-url="{% url 'trainer' trainer_slug=item.trainer.slug %}"
     data-schedule-id="{{ item.pk }}"
-    data-available="{% if item.count_remained_seats and item.trainer.user != user and item.in_future %}true{% else %}false{% endif %}"
-    data-is-booked="{% if item.pk in user_booked %}true{% else %}false{% endif %}"
-    data-can-cancel="{% if item.pk in user_booked and item.day_before %}true{% else %}false{% endif %}">
+    data-available="{% if item.is_available and item.trainer.user != user %}true{% else %}false{% endif %}"
+    data-is-booked="{% if item.is_user_booked %}true{% else %}false{% endif %}"
+    data-can-cancel="{% if item.is_user_booked and item.day_before %}true{% else %}false{% endif %}">
 
   <h5 class="mb-0 schedule__name">{{ item.service }}</h5>
 
@@ -16,21 +16,19 @@
     <span class="schedule-time-range">
       <time datetime="{{ item.start_time|date:'c' }}">{{ item.start_time|date:'H:i' }}</time>
       <span> - </span>
-      {% with end_time=item.start_time|add:item.service.duration %}
-      <time datetime="{{ end_time|date:'c' }}">{{ end_time|date:'H:i' }}</time>
-      {% endwith %}
+      <time datetime="{{ item.end_time|date:'c' }}">{{ item.end_time|date:'H:i' }}</time>
     </span>
 
-    <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ item.service.duration_minutes }} мин.</span>
+    <span class="text-body-secondary schedule-time-duration"><i class="bi bi-clock"></i> {{ item.service.duration_min }} мин.</span>
   </div>
 
   <span class="schedule__trainer">{{ item.trainer }}</span>
 
-  {% if item.count_remained_seats and item.in_future %}
+  {% if item.is_available %}
   <span class="text-body-secondary">Свободно мест: {{ item.count_remained_seats }}</span>
   {% endif %}
 
-  {% if item.pk in user_booked %}
+  {% if item.is_user_booked %}
   <strong class="text-info">Вы записаны</strong>
   {% endif %}
 
