The user's email field is now mandatory.

--- a/fitness/users/templates/users/profile.html
+++ b/fitness/users/templates/users/profile.html
@@ -34,7 +34,7 @@
             <li class="profile-item">
               <h5><i class="bi bi-envelope"></i> Электронная почта</h5>
 
-              <span>{{ user.email|default:'Не указана' }}</span>
+              <span>{{ user.email }}</span>
             </li>
 
             <li class="profile-item">
