--- a/fitness/schedule/templates/schedule/includes/schedule-item.html
+++ b/fitness/schedule/templates/schedule/includes/schedule-item.html
@@ -6,9 +6,9 @@
     data-trainer-photo="{{ item.trainer.avatar }}"
     data-trainer-url="{% url 'trainer' trainer_slug=item.trainer.slug %}"
     data-schedule-id="{{ item.pk }}"
-    data-available="{% if item.is_available and item.trainer.user != user %}true{% else %}false{% endif %}"
-    data-is-booked="{% if item.is_user_booked %}true{% else %}false{% endif %}"
-    data-can-cancel="{% if item.is_user_booked and item.day_before %}true{% else %}false{% endif %}">
+    data-booking-id="{% if item.booking_id %}{{ item.booking_id }}{% else %}null{% endif %}"
+    data-can-book="{% if item.is_available and not item.booking_id and item.trainer.user != user %}true{% else %}false{% endif %}"
+    data-can-cancel="{% if item.booking_id and item.day_before %}true{% else %}false{% endif %}">
 
   <h5 class="mb-0 schedule__name">{{ item.service }}</h5>
 
@@ -28,7 +28,7 @@
   <span class="text-body-secondary">Свободно мест: {{ item.count_remained_seats }}</span>
   {% endif %}
 
-  {% if item.is_user_booked %}
+  {% if item.booking_id %}
   <strong class="text-info">Вы записаны</strong>
   {% endif %}
 
