--- a/fitness/users/templates/users/classes.html
+++ b/fitness/users/templates/users/classes.html
@@ -25,7 +25,7 @@
       <ul class="list-reset schedule__list schedule__list_active">
         {% for el in day.items %}
 
-        {% include 'users/includes/schedule-item.html' with item=el.schedule canceled=el.canceled %}
+        {% include 'users/includes/schedule-item.html' with item=el.schedule canceled=el.canceled booking_id=el.id %}
 
         {% endfor %}
       </ul>
