1. Errors are now displayed under the appropriate fields in the forms. 2. After registration, the user becomes logged in 3. CreateUserAPIView added 4. Now error-free fields are not displayed as valid in the forms.

--- a/fitness/schedule/templates/schedule/schedule.html
+++ b/fitness/schedule/templates/schedule/schedule.html
@@ -2,6 +2,7 @@
 {% load static schedule_tags %}
 
 {% block links %}
+<link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
 <link rel="stylesheet" href="{% static 'schedule/css/style.css' %}">
 {% endblock %}
 
@@ -17,7 +18,7 @@
 
     <h1 class="text-center mb-5">{{ title }}</h1>
 
-    {% include 'schedule/includes/form-messages.html' %}
+    {% include 'users/includes/messages.html' %}
 
     {% show_schedule request %}
   </div>
@@ -26,6 +27,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'schedule/js/messages.js' %}"></script>
+<script src="{% static 'users/js/messages.js' %}"></script>
 <script src="{% static 'schedule/js/schedule.js' %}"></script>
 {% endblock %}
