--- a/fitness/core/templates/core/service.html
+++ b/fitness/core/templates/core/service.html
@@ -4,6 +4,7 @@
 {% block title %}{{ service }}{% endblock %}
 
 {% block links %}
+<link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
 <link rel="stylesheet" href="{% static 'schedule/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'core/css/media.css' %}">
@@ -60,7 +61,7 @@
   <div class="container">
     <h2 class="text-center mb-4">Расписание</h2>
 
-    {% include 'schedule/includes/form-messages.html' %}
+    {% include 'users/includes/messages.html' %}
 
     {% show_schedule request service_id=service.pk %}
   </div>
@@ -69,6 +70,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'schedule/js/messages.js' %}"></script>
+<script src="{% static 'users/js/messages.js' %}"></script>
 <script src="{% static 'schedule/js/schedule.js' %}"></script>
 {% endblock %}
