--- a/fitness/users/templates/users/base.html
+++ b/fitness/users/templates/users/base.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block links %}
+<link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
 <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'users/css/media.css' %}">
 {% endblock %}
