--- a/fitness/users/templates/users/classes.html
+++ b/fitness/users/templates/users/classes.html
@@ -11,7 +11,7 @@
 <div class="container">
   <h1 class="title mb-3">{{ title }}</h1>
 
-  {% include 'schedule/includes/form-messages.html' %}
+  {% include 'users/includes/messages.html' %}
 
   {% include 'schedule/includes/schedule-modal.html' %}
 
@@ -38,6 +38,6 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'schedule/js/messages.js' %}"></script>
+<script src="{% static 'users/js/messages.js' %}"></script>
 <script src="{% static 'schedule/js/schedule.js' %}"></script>
 {% endblock %}
