--- a/fitness/users/templates/users/password_reset_form.html
+++ b/fitness/users/templates/users/password_reset_form.html
@@ -8,7 +8,7 @@
 {% block main %}
 <div class="container">
   <div class="wrap">
-    {% include 'users/includes/form-messages.html' %}
+    {% include 'users/includes/messages.html' %}
 
     <form class="form m-auto" method="post">
       {% csrf_token %}
@@ -28,6 +28,14 @@
             {{ field }}
             <label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
           </div>
+
+          {% if field.errors %}
+          <div class="field-errors">
+            {% for error in field.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% endif %}
         </div>
         {% endfor %}
       </div>
