--- a/fitness/core/templates/core/service.html
+++ b/fitness/core/templates/core/service.html
@@ -39,9 +39,13 @@
           {{ service.description|linebreaks }}
         </div>
 
+        {% get_schedule request service_id=service.pk as result %}
+
+        {% if result.schedule %}
         <div class="block">
-          <a href="#schedule" class="btn btn-primary btn-lg">Смотреть расписание</a>
+          <a href="#schedule" class="btn btn-primary btn-lg">Записаться</a>
         </div>
+        {% endif %}
       </div>
     </div>
   </div>
@@ -57,15 +61,17 @@
 </section>
 {% endif %}
 
+{% if result.schedule %}
 <section id="schedule">
   <div class="container">
     <h2 class="text-center mb-4">Расписание</h2>
 
     {% include 'users/includes/messages.html' %}
 
-    {% show_schedule request service_id=service.pk %}
+    {% include 'schedule/schedule-list.html' with days=result.days schedule=result.schedule %}
   </div>
 </section>
+{% endif %}
 
 {% endblock %}
 
