--- a/fitness/schedule/static/schedule/css/style.css
+++ b/fitness/schedule/static/schedule/css/style.css
@@ -99,3 +99,43 @@
 .day>.btn {
   --bs-btn-focus-box-shadow: none;
 }
+
+/* bookings */
+
+.classes-block {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.classes-block:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.pagination {
+  --bs-pagination-focus-box-shadow: none;
+}
+
+.classes-date {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.classes-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.classes-item {
+  padding: 10px 20px;
+  border-radius: 0.5rem;
+  background-color: var(--bs-secondary-bg);
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+  display: flex;
+  flex-direction: column;
+}
+
+.border-l {
+  border-left: 5px solid var(--border-color);
+}
