--- a/fitness/schedule/templates/schedule/bookings.html
+++ b/fitness/schedule/templates/schedule/bookings.html
@@ -1,22 +1,24 @@
-{% extends 'users/base.html' %}
+{% extends 'base.html' %}
 
 {% load static %}
 
 {% block links %}
-{{ block.super }}
+<link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
+<link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'schedule/css/style.css' %}">
 {% endblock %}
 
 {% block main %}
 <div class="container">
-  <h1 class="title mb-3">{{ title }}</h1>
+  <h1 class="mb-4 mb-sm-5 text-center">{{ title }}</h1>
 
   {% include 'users/includes/messages.html' %}
 
   {% include 'schedule/includes/schedule-modal.html' %}
 
+  {% if bookings %}
   <div class="classes-block">
-    {% for day in classes %}
+    {% for day in bookings %}
     <div>
       {% now 'Y' as current_year %}
 
@@ -24,16 +26,17 @@
 
       <ul class="list-reset schedule__list schedule__list_active">
         {% for el in day.items %}
-
-        {% include 'users/includes/schedule-item.html' with item=el.schedule canceled=el.canceled booking_id=el.id %}
-
+        {% include 'schedule/includes/booking-item.html' with item=el.schedule canceled=el.canceled booking_id=el.id %}
         {% endfor %}
       </ul>
     </div>
     {% endfor %}
   </div>
+  {% else %}
+  <span class="empty-state-text">У вас пока нет записей на занятия</span>
+  {% endif %}
 
-  {% include 'users/includes/pagination.html' %}
+  {% include 'schedule/includes/pagination.html' %}
 </div>
 {% endblock %}
 
