--- a/fitness/schedule/templates/schedule/schedule-list.html
+++ b/fitness/schedule/templates/schedule/schedule-list.html
@@ -1,8 +1,10 @@
 {% include 'schedule/includes/schedule-modal.html' %}
 
 <div class="btn-group days" role="group">
-  {% for day in days %}
-  <div class="day">
+  {% for item in days %}
+
+  {% with day=item.0 has_items=item.1 %}
+  <div class="day{% if has_items %} has-items{% endif %}">
     <input type="radio" class="btn-check" name="day" id="day{{ forloop.counter }}" autocomplete="off" {% if forloop.first %}checked{% endif %} value="{{ day|date:'c' }}">
 
     <label class="btn btn-outline-primary" for="day{{ forloop.counter }}">
@@ -11,20 +13,20 @@
       <span>{{ day|date:'j' }}</span>
     </label>
   </div>
+  {% endwith %}
+
   {% endfor %}
 </div>
 
 {% for day in schedule %}
-<ul class="list-reset schedule__list{% if forloop.first and day.date == days|first %} schedule__list_active{% endif %}"
+<ul class="list-reset schedule__list{% if forloop.first and day.date == days.0.0 %} schedule__list_active{% endif %}"
     data-date="{{ day.date|date:'c' }}">
   {% for item in day.items %}
-
   {% include 'schedule/includes/schedule-item.html' %}
-
   {% endfor %}
 </ul>
 {% endfor %}
 
-<div id="schedule_empty" {% if days|first != schedule.0.date %}class="active" {% endif %}>
+<div id="schedule_empty" {% if days.0.0 != schedule.0.date %}class="active" {% endif %}>
   <span>В выбранный день занятий нет</span>
 </div>
