the trainer's photo in the detailed class information is slightly reduced on mobile devices

--- a/fitness/schedule/templates/schedule/schedule.html
+++ b/fitness/schedule/templates/schedule/schedule.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
 <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'schedule/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'schedule/css/media.css' %}">
 {% endblock %}
 
 {% block main %}
