--- a/fitness/core/templates/core/service.html
+++ b/fitness/core/templates/core/service.html
@@ -6,6 +6,7 @@
 {% block links %}
 <link rel="stylesheet" href="{% static 'users/css/messages.css' %}">
 <link rel="stylesheet" href="{% static 'schedule/css/style.css' %}">
+<link rel="stylesheet" href="{% static 'schedule/css/media.css' %}">
 <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'core/css/media.css' %}">
 {% endblock %}
